# music_recommendation_system

./: .cache  .env  .env.example  .gitignore  01_ingest_data.py  02_process_data.py  api.py  app.py  dashboard.py  docker-compose.yml  eval_log.txt  onboarding.md  pyproject.toml  readme.md  requirements.txt  train_node2vec_v2.py
docs/: mkdocs.yml
docs/docs/: ai_models.md  app_documentation.md  backend_api.md  data_engineering.md  frontend_angular.md  help-mkdocs.md  index.md  ingest_data_documentation.md  manual_despliegue.md  manual_usuario.md  mlops_evaluation.md  process_data_documentation.md  recommendator_engine.md
docs/guides/: NCF_TRAINING_GUIDE.md  SETUP_USERS.md  onboarding.md
docs/site/: 404.html  index.html
docs/site/app_documentation/: index.html
docs/site/ingest_data_documentation/: index.html
docs/site/process_data_documentation/: index.html
docs/site/recommendator_engine/: index.html
docs/site/search/: search_index.json
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  (+4 more)
logs/: eval_log.txt
models/: item_encoder.pkl  user_encoder.pkl
scripts/: check_status.py  detect_language.py  export_all_database.py  export_balanced_dataset.py  export_new_database_only_processed.py  generate_interactions_from_encoder.py  update_popularity_deezer.py
src/: detect_language.py  export_all_database.py  export_balanced_dataset.py  export_new_database_only_processed.py  ingest_data.py  process_data.py  test_spotify.py  update_popularity_deezer.py  upload_v4_to_mongo.py
src/api/: api.py
src/dashboard/: dashboard.py
src/data/: generate_interactions.py  ingest_data.py  process_data.py
src/evaluation/: evaluate_models.py  generate_plots.py
src/modeling/: export_to_onnx.py  generate_interactions.py  ncf_inference.py  ncf_model.py  node2vec_engine.py  recommendation_engine.py  train_ncf.py
(+56 files in other folders)
